--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,6 +5,7 @@
   --ft-color-muted: #667085;
   --ft-control-bg: #F2F4F7;
   --ft-shadow-color: rgb(0 0 0 / 20%);
+  --ft-popup-z-index: 49;
 }
 
 body {
